HW5/E-2.1.26-EulerFunction/wdir_msg/compile.err

EulerFunction.java:26: error: missing return statement
    }
    ^
1 error


